--- a/frontend/packages/volto-trepi-intranet/package.json
+++ b/frontend/packages/volto-trepi-intranet/package.json
@@ -67,6 +67,8 @@
   "peerDependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "classnames": "^2.5.1",
+    "react-intl": "^3.12.1",
     "@plone/registry": "workspace:*",
     "@plone/types": "workspace:*"
   },
